--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-University of California, Berkeley (Expected 2019). Website under construction.
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Antony Tejakusuma</title>
+  </head>
+  
+  <body>
+        <h1>Antony Tejakusuma</h1>
+        <h4>Electrical Engineering and Computer Science Student at Universtiy of California, Berkeley</h4>
+
+        <p>
+        Welcome to my unfinished personal website.
+        </p>
+  <ul>
+    <li>
+      <a href="https://github.com/tonytej">Github</a>
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/in/tonytej/">Linkedin</a>
+    </li>
+  </ul>
+    </body>
+</html>
