--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
         <h1>Antony Tejakusuma</h1>
-        <h4>Electrical Engineering and Computer Science Student at Universtiy of California, Berkeley</h4>
+        <h4>Electrical Engineering and Computer Science Student at University of California, Berkeley</h4>
 
         <p>
         Welcome to my unfinished personal website.
