--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <head>
-    <title>Antony Tejakusuma</title>
-  </head>
-  
-  <body>
-        <h1>Antony Tejakusuma</h1>
-        <h4>Electrical Engineering and Computer Science Student at University of California, Berkeley</h4>
+	<head>
+		<title>Antony Tejakusuma</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
 
-        <p>
-        Welcome to my unfinished personal website.
-        </p>
-  <ul>
-    <li>
-      <a href="https://github.com/tonytej">Github</a>
-    </li>
-    <li>
-      <a href="https://www.linkedin.com/in/tonytej/">Linkedin</a>
-    </li>
-  </ul>
-    </body>
+				<!-- Header -->
+					<header id="header">
+						<h1>Antony Tejakusuma</h1>
+						<p>Electrical Engineering and Computer Science Student at University of California, Berkeley</p>
+						<nav>
+							<ul>
+								<li><a href="https://drive.google.com/file/d/1-U9ZsbHhFX3EMXrHHWkh_Hs76K_pF_xp/view?usp=sharing" class="icon fa-file"><span class="label">Resume</span></a></li>
+								<li><a href="https://linkedin.com/in/tonytej/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/tonytej" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:tonytej@berkeley.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer 
+					<footer id="footer">
+						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+					</footer>//-->
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
