--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<header id="header">
 						<h1>Antony Tejakusuma</h1>
 						<p>Electrical Engineering and Computer Science Student at University of California, Berkeley</p>
+                        <p>"Yellow"</p>
 						<nav>
 							<ul>
 								<li><a href="https://drive.google.com/file/d/1-U9ZsbHhFX3EMXrHHWkh_Hs76K_pF_xp/view?usp=sharing" class="icon fa-file"><span class="label">Resume</span></a></li>
